<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_gradient_primary"
    tools:context=".DataPokemonActivity">

    <LinearLayout
        android:id="@+id/cvOne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/ivMainPoke"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/descriptionImageMain"
                tools:src="@drawable/ic_btn_intro"
                tools:tint="@color/black" />

            <ProgressBar
                android:id="@+id/pbImageMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        style="@style/CardWithTopRoundedCorners"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/transparent_Background"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvOne"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNamePokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@string/sampleName" />


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <ImageView
            android:id="@+id/ivType1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/descriptionImageType"
            tools:src="@drawable/ic_btn_intro"
            tools:tint="@color/black"/>

        <ImageView
            android:id="@+id/ivType2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:contentDescription="@string/descriptionImageType"
            tools:src="@drawable/ic_btn_intro"
            tools:tint="@color/black"/>

    </LinearLayout>

    <LinearLayout style="@style/BaseLinearLayoutHorizontal"
        >

        <TextView
            style="@style/TextViewStats"
            android:text="@string/experience"
            />

        <TextView
            android:id="@+id/tvExperience"
            style="@style/TextViewDataResponse"
            tools:text="@string/sampleNum" />
    </LinearLayout>

    <LinearLayout style="@style/BaseLinearLayoutHorizontal">

        <TextView
            style="@style/TextViewStats"
            android:text="@string/height" />

        <TextView
            android:id="@+id/tvHeight"
            style="@style/TextViewDataResponse"
            tools:text="@string/sampleNum" />
    </LinearLayout>

    <LinearLayout style="@style/BaseLinearLayoutHorizontal">

        <TextView
            style="@style/TextViewStats"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/tvWeight"
            style="@style/TextViewDataResponse"
            tools:text="@string/sampleNum" />
    </LinearLayout>

    <LinearLayout style="@style/BaseLinearLayoutHorizontal"

        android:padding="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"


        >

        <TextView
            style="@style/TextViewStats"
            android:text="@string/shiny"
            android:layout_gravity="center_vertical"
            />

        <LinearLayout
            android:id="@+id/tvShiny"
            style="@style/TextViewDataResponse"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            >

            <ImageView
                android:id="@+id/ivShiny"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_shiny"
                tools:tint="@color/black"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/descriptionImageIconShiny" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swShiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>